<resources>
  <string name="app_name">Cloudy Curator</string>
  <string name="permission_denied_explanation">Permissions needed for full app functionality.</string>
  <string name="desc_book_list">Book List</string>
  <string name="placeholder">TBD</string>
  <string name="menu_home">Home</string>
  <string name="menu_add">Add</string>
  <string name="menu_logout">Logout</string>
  <string name="logout_message">Are you sure you want to log out of the app?</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="err_no_data">No books found, try adding some.</string>
  <string name="title">Title:</string>
  <string name="author">Author(s):</string>
  <string name="isbn">ISBN:</string>
  <string name="unread">Unread</string>
  <string name="read">Read</string>
  <string name="not_owned">Not Owned</string>
  <string name="owned">Owned</string>
  <string name="add">Add</string>
  <string name="add_to_library">Add to Library?</string>
  <string name="err_add_book">Unable to add book to library, please try again later.</string>
  <string name="update">Update</string>
  <string name="search">Search</string>
  <string name="search_hint">Search term</string>
  <string name="no_results">No results found.</string>
  <string name="fragment_query">Search for Book</string>
  <string name="fragment_book">Your Book</string>
  <string name="fragment_book_add">Add Book to Library</string>
  <string name="fragment_book_list">In Your Library</string>
  <string name="debug_path">/storage/self/primary/DCIM/Camera</string>
  <string name="err_no_camera_detected">Camera was not detected.</string>
  <string name="remove_from_library">Remove from Library</string>
  <string name="remove_book_message">Remove \'%s\' from your library?</string>
  <string name="err_remove_book">Unable to remove book from library, please try again later.</string>
  <string name="err_update_book">Failed to update book, please try again later.</string>
  <string name="search_manual">Manual Search</string>
  <string name="type_of_search">Search by:</string>
  <string name="search_type_title">Title</string>
  <string name="search_type_isbn">ISBN</string>
  <string name="search_type_lccn">Library of Congress Control Number</string>
  <string name="desc_text_list">List of results from text scan.</string>
  <string name="search_for">Search for:</string>
  <string name="max_results">Showing only 10 results, try a more specific query if book is not listed.</string>
  <string name="published_date_format">Published: %s</string>
  <string name="dismiss">Dismiss</string>
  <string name="isbn_format">ISBN: %s</string>
  <string name="publisher_format">Published by: %s</string>
  <string name="publisher">Publisher:</string>
  <string name="published_date">Published Date:</string>
  <string name="categories">Categories:</string>
  <string name="categories_format">Categories: %s</string>
  <string name="user_has_read_this_book">User has read this book.</string>
  <string name="user_owns_this_book">User owns this book.</string>
  <string name="fragment_select_book">Select a Book to Add</string>
  <string name="fragment_select_text">Select Text</string>
  <string name="librarian">Librarian</string>
  <string name="scan_photo">Scan Photo</string>
  <string name="check_back_later">Check back later!</string>
  <string name="fragment_librarian">Break Room</string>
  <string name="fragment_book_update">Update Book</string>
  <string name="err_image_not_loaded">Image not loaded.</string>
  <string name="err_bar_code_task">Bar code detection task failed.</string>
  <string name="err_no_bar_code_or_text">Did not find any bar codes/text in image.</string>
  <string name="err_image_empty">Image was empty.</string>
  <string name="err_image_not_found">Image does not exist.</string>
  <string name="err_camera_data_unexpected">Unexpected data from camera.</string>
  <string name="err_invalid_isbn">Invalid ISBN value.</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="err_photo_file_not_found">Failed to get file for photo.</string>
  <string name="err_camera_intent_failed">Unable to create camera intent.</string>
  <string name="err_search_criteria">Invalid search criteria.</string>
  <string name="err_text_detection_task">Text detection task failed.</string>
  <string name="menu_cancel">Cancel</string>
  <string name="continue_button">Continue</string>
  <string name="show_hint">Show this hint in the future.</string>
  <string name="note_manual_bar_code">Note: if a bar code cannot be read, you will be prompted to enter the bar code manually.</string>
  <string name="hint_barcode">Picture of barcode.</string>
  <string name="hint_tutorial">To add a book, take a photo of the bar code. An example of a bar code:</string>
  <string name="title_tutorial">Tutorial</string>
  <string name="title_gathering_data">Getting Data</string>
  <string name="err_bar_code_not_found">Barcode not found in image.</string>
  <string name="retry">Retry</string>
  <string name="unknown_request_code">Unknown request code.</string>
  <string name="err_unknown_user">Unknown user.</string>
  <string name="permission_camera">Permission needed for capturing barcode images for processing.</string>
  <string name="permission_storage">Permission needed for book database.</string>
  <string name="permission_default">Permission needed for application to function properly.</string>

  <string name="debug_prompt">Select image file to use:</string>
  <string name="hint_search_isbn">8 or 13 digit ISBN number.</string>
  <string name="hint_example">Example:</string>
  <string name="hint_img_barcode">Sample ISNB barcode.</string>
  <string name="title_camera_source">Camera</string>
  <string name="menu_preferences">Preferences</string>
  <string name="message_unknown_activity_result">Unfortunately an unknown error occurred. Please try again later.</string>
  <string name="hint_remove_book">Remove book from library?</string>
  <string name="user_read_this_book">User has read this book.</string>
  <string name="remove_specific_book_message">Remove \'%s\' from your library?</string>
  <string name="fragment_preferences">User Preferences</string>
  <string-array name="debug_scenario_array">
    <item>scenario_barcode.jpg</item>
    <item>scenario_barcode_not_found.jpg</item>
  </string-array>

  <string name="mode_odt_live_title">Object Detection: Live Camera</string>
  <string name="mode_odt_live_subtitle">A device’s live camera can be used to detect objects in an environment.</string>
  <string name="mode_odt_static_title">Object Detection: Static Image</string>
  <string name="mode_odt_static_subtitle">One or more objects can be detected from a provided image.</string>
  <string name="mode_barcode_live_title">Barcode Scanning</string>
  <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
  <string name="settings_title">MLKit Showcase Settings</string>
  <string name="cd_settings_button">Settings</string>
  <string name="cd_close_button">Back</string>
  <string name="cd_flash_button">Toggle camera flash</string>
  <string name="cd_photo_library_button">Upload image</string>
  <string name="prompt_point_at_an_object">Point your camera at an object</string>
  <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
  <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
  <string name="prompt_move_camera_closer">Move closer to search</string>
  <string name="prompt_searching">Searching&#8230;</string>
  <string name="product_search_button">Search object</string>
  <plurals name="bottom_sheet_title">
    <item quantity="one">%d match found</item>
    <item quantity="other">%d matches found</item>
  </plurals>
  <string name="static_image_prompt_detected_no_results">No results found</string>
  <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
  <string name="static_image_card_no_result_title">No result found</string>
  <string name="static_image_card_no_result_subtitle">Support text place holder</string>
  <string name="static_image_preview_card_subtitle">+%d more results</string>

  <!-- Strings for camera settings. -->
  <string name="pref_category_camera">Camera</string>
  <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
  <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
  <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

  <!-- Strings for object detection settings. -->
  <string name="pref_category_object_detection">Object detection</string>
  <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
  <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
  <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
  <string name="pref_title_object_detector_enable_classification">Enable classification</string>

  <!-- Strings for product search settings. -->
  <string name="pref_category_product_search">Product search</string>
  <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
  <string name="pref_title_enable_auto_search">Enable auto search</string>
  <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
  <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
  <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
  <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
  <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
  <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>

  <!-- Strings for barcode detection settings. -->
  <string name="pref_category_barcode_detection">Barcode detection</string>
  <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
  <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
  <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
  <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
  <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
  <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
  <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
  <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
  <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
  <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
  <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
  <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
  <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
  <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
  <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
  <string name="pref_debug">Debug</string>
</resources>
