<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/navigation_menu_home"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/navigation_menu_add"
            android:icon="@drawable/ic_add_dark"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/navigation_menu_librarian"
            android:icon="@drawable/ic_librarian_dark"
            android:title="@string/librarian"
            android:visible="false" />
    </group>

    <group>
        <item
            android:id="@+id/navigation_menu_logout"
            android:icon="@drawable/ic_logout_dark"
            android:title="@string/menu_logout" />
    </group>

</menu>
