<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userbook_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userbook_text_author_value"/>

    <TextView
        android:id="@+id/userbook_text_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/userbook_text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userbook_text_title" />

    <TextView
        android:id="@+id/userbook_text_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/author"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/userbook_text_author_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userbook_text_author_value" />

    <TextView
        android:id="@+id/userbook_text_author_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:gravity="center_vertical|end"
        android:singleLine="false"
        android:text="@string/placeholder"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/userbook_text_isbn_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userbook_text_title_value" />

    <TextView
        android:id="@+id/userbook_text_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/isbn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/userbook_text_author_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userbook_toggle_read"/>

    <TextView
        android:id="@+id/userbook_text_isbn_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userbook_text_isbn"
        app:layout_constraintBottom_toBottomOf="@+id/userbook_text_isbn" />

    <ToggleButton
        android:id="@+id/userbook_toggle_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text=""
        android:textOff="@string/unread"
        android:textOn="@string/read"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userbook_text_isbn" />

    <ToggleButton
        android:id="@+id/userbook_toggle_owned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text=""
        android:textOff="@string/not_owned"
        android:textOn="@string/owned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userbook_text_isbn" />

    <Button
        android:id="@+id/userbook_button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userbook_toggle_owned" />

    <Button
        android:id="@+id/userbook_button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/remove_from_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>