<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/manual_search_text_isbn"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/isbn"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/manual_search_edit_isbn"
    app:layout_constraintBottom_toBottomOf="@id/manual_search_edit_isbn"/>
  <EditText
    android:id="@+id/manual_search_edit_isbn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:autofillHints="@string/search"
    android:gravity="end"
    android:hint="@string/hint_search_isbn"
    android:inputType="number|textNoSuggestions"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/manual_search_text_product_example"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hint_example"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/manual_search_image_isbn"
    app:layout_constraintTop_toTopOf="@id/manual_search_image_isbn"
    app:layout_constraintBottom_toBottomOf="@id/manual_search_image_isbn"/>
  <ImageView
    android:id="@+id/manual_search_image_isbn"
    android:layout_width="@android:dimen/thumbnail_width"
    android:layout_height="@android:dimen/notification_large_icon_width"
    android:layout_margin="@dimen/default_view_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/manual_search_text_product_example"
    app:layout_constraintTop_toBottomOf="@id/manual_search_edit_isbn"
    app:srcCompat="@drawable/barcode_base"
    android:contentDescription="@string/hint_img_barcode"/>

  <Button
    android:id="@+id/manual_search_button_continue"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/continue_button"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/manual_search_image_isbn" />

</androidx.constraintlayout.widget.ConstraintLayout>