<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="1dp"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/colorPrimaryDark"
  android:orientation="vertical">

  <TextView
    android:id="@+id/book_text_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:gravity="start"
    android:text="@string/placeholder"
    android:textAlignment="viewStart"
    android:textColor="@android:color/white"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/book_text_authors"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:text="@string/placeholder"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/book_image_delete"
    app:layout_constraintBottom_toBottomOf="@id/book_image_delete"/>

  <ImageButton
    android:id="@+id/book_image_delete"
    style="@android:style/Widget.Holo.Light.ImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:background="@color/colorPrimaryDark"
    android:contentDescription="@string/hint_remove_book"
    android:padding="8dp"
    android:src="@drawable/ic_delete_dark"
    app:layout_constraintBottom_toTopOf="@id/book_text_publisher"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/book_text_title" />

  <TextView
    android:id="@+id/book_text_published"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/published_date_format"
    android:textAlignment="viewStart"
    app:layout_constraintBottom_toTopOf="@id/book_text_categories"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_text_authors" />

  <TextView
    android:id="@+id/book_text_publisher"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/publisher_format"
    android:textAlignment="viewEnd"
    app:layout_constraintBottom_toTopOf="@id/book_text_categories"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_text_authors" />

  <TextView
    android:id="@+id/book_text_categories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/categories_format"
    android:textAlignment="viewStart"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/book_text_isbn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_text_publisher" />

  <Switch
    android:id="@+id/book_switch_owned"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:includeFontPadding="false"
    android:showText="false"
    android:splitTrack="false"
    android:switchPadding="@dimen/default_view_margin"
    android:text="@string/owned"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/book_text_categories" />

  <Switch
    android:id="@+id/book_switch_read"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:switchPadding="@dimen/default_view_margin"
    android:text="@string/read"
    android:textOff="@string/unread"
    android:textOn="@string/read"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@id/book_switch_owned"
    app:layout_constraintTop_toBottomOf="@id/book_text_categories" />

  <TextView
    android:id="@+id/book_text_isbn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/isbn_format"
    android:textAlignment="viewEnd"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_text_categories" />

</androidx.constraintlayout.widget.ConstraintLayout>